# android-ui-exhaustive-explorer

./: .editorconfig  .gitignore  README.md  dev.bat  setup.bat
android/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  (+2 more)
docs/: ARCHITECTURE.md  COUNTERMEASURES.md  DEMO.md  LIMITATIONS.md  PHASE_LOG.md  README.md  RELATED_WORK.md  ROADMAP.md  SAMSUNG_NOTES_HARD_CASES.md  UI_INFO_SOURCES.md  dashboard_preview.html  report.html
docs/images/: case-01-dump.xml  case-02-dump.xml  case-04-dump.xml  case-06-dump.xml  case-10-dump.xml
scripts/: README.md  dev.ps1  dump_screen.ps1  pull_runs.ps1  setup_adb_reverse.ps1
server/: README.md  pyproject.toml
server/src/explorer_server/: __init__.py  main.py
server/src/explorer_server/routers/: coverage.py  health.py  phase.py  runs.py
server/src/explorer_server/services/: __init__.py
server/src/explorer_server/storage/: __init__.py
server/src/explorer_server/vlm/: __init__.py
server/tests/: test_health.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: main.tsx  vite-env.d.ts
web/src/api/: health.ts  phase.ts  runs.ts
web/src/styles/: global.css
web/src/ui/: App.tsx  HealthBadge.tsx  PhasePage.tsx  RunsPage.tsx
(+28 files in other folders)
