[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explorer-server"
version = "0.1.0"
description = "FastAPI backend for android-ui-exhaustive-explorer (Phase 0 Bootstrap)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Delpiero21" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "httpx>=0.27",   # used later for Ollama proxy (Tier 5 VLM)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
explorer-server = "explorer_server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/explorer_server"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
